@@ -1,19 +1,15 @@
 package com.reason.ide.search.reference;
 
 import com.intellij.openapi.util.*;
-import com.intellij.psi.*;
 import com.intellij.usageView.*;
 import com.reason.ide.*;
 import com.reason.lang.core.psi.*;
 import com.reason.lang.core.psi.impl.*;
 import org.junit.*;
-import org.junit.runner.*;
-import org.junit.runners.*;
 
 import java.util.*;
 
 @SuppressWarnings("ConstantConditions")
-@RunWith(JUnit4.class)
 public class FindLIdentUsagesRMLTest extends ORBasePlatformTestCase {
     @Test
     public void test_let() {
@@ -21,7 +17,7 @@ public class FindLIdentUsagesRMLTest extends ORBasePlatformTestCase {
 
         List<UsageInfo> usages = findUsages("A.re");
         assertSize(1, usages);
-        assertInstanceOf(usages.get(0).getElement().getParent(), RPsiLetBinding.class);
+        assertInstanceOf(usages.getFirst().getElement().getParent(), RPsiLetBinding.class);
     }
 
     @Test
@@ -30,7 +26,7 @@ public class FindLIdentUsagesRMLTest extends ORBasePlatformTestCase {
 
         List<UsageInfo> usages = findUsages("A.re");
         assertSize(1, usages);
-        assertInstanceOf(usages.get(0).getElement().getParent(), RPsiTypeBinding.class);
+        assertInstanceOf(usages.getFirst().getElement().getParent(), RPsiTypeBinding.class);
     }
 
     @Test
@@ -39,7 +35,7 @@ public class FindLIdentUsagesRMLTest extends ORBasePlatformTestCase {
 
         List<UsageInfo> usages = findUsages("A.re");
         assertSize(1, usages);
-        assertInstanceOf(usages.get(0).getElement().getParent(), RPsiFunctionCall.class);
+        assertInstanceOf(usages.getFirst().getElement().getParent(), RPsiFunctionCall.class);
     }
 
     @Test
@@ -57,7 +53,7 @@ public class FindLIdentUsagesRMLTest extends ORBasePlatformTestCase {
 
         List<UsageInfo> usages = findUsages("FLIC.re");
         assertSize(1, usages);
-        UsageInfo usageInfo = usages.get(0);
+        UsageInfo usageInfo = usages.getFirst();
         assertEquals("x + 1", usageInfo.getElement().getParent().getText());
     }
 
@@ -67,7 +63,7 @@ public class FindLIdentUsagesRMLTest extends ORBasePlatformTestCase {
 
         List<UsageInfo> usages = findUsages("A.rei");
         assertSize(1, usages);
-        UsageInfo usageInfo = usages.get(0);
+        UsageInfo usageInfo = usages.getFirst();
         assertEquals("t", usageInfo.getElement().getParent().getText());
         assertEquals("A.B.toString", ((RPsiQualifiedPathElement) usageInfo.getElement().getParent().getParent().getParent()).getQualifiedName());
     }
@@ -81,7 +77,7 @@ public class FindLIdentUsagesRMLTest extends ORBasePlatformTestCase {
 
         List<UsageInfo> usages = findUsages("A.re");
         assertSize(1, usages);
-        UsageInfo usageInfo = usages.get(0);
+        UsageInfo usageInfo = usages.getFirst();
         assertEquals("A.x.f2", ((RPsiQualifiedPathElement) usageInfo.getElement().getParent()).getQualifiedName());
     }
 
@@ -94,7 +90,20 @@ public class FindLIdentUsagesRMLTest extends ORBasePlatformTestCase {
 
         List<UsageInfo> usages = findUsages("A.re");
         assertSize(1, usages);
-        UsageInfo usageInfo = usages.get(0);
+        UsageInfo usageInfo = usages.getFirst();
         assertEquals(TextRange.create(50, 52), usageInfo.getSegment());
+    }
+
+    @Test
+    public void test_destructuration() {
+        configureCode("A.re", """
+                let (dialogStatus, setDialog<caret>Status) = x;
+                let _ = () => setDialogStatus();
+                """);
+
+        List<UsageInfo> usages = findUsages("A.re");
+        assertSize(1, usages);
+        UsageInfo usageInfo = usages.getFirst();
+        assertEquals(TextRange.create(55, 70), usageInfo.getSegment());
     }
 }
